# MiniArc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: on-device-llm-research-gaps-2026.md
docs/superpowers/plans/: 2026-06-14-miniARC.md
docs/superpowers/specs/: 2026-06-14-miniARC-design.md
scripts/: download_model.ps1  download_model.sh
src/: main.cpp
src/engine/: engine.cpp  engine.h
src/scheduler/: scheduler.cpp  scheduler.h
src/server/: server.cpp  server.h
src/thermal/: thermal.h  thermal_linux.cpp  thermal_macos.mm  thermal_monitor.cpp  thermal_monitor.h  thermal_windows.cpp
tests/: CMakeLists.txt  test_scheduler.cpp  test_thermal_logic.cpp
